# XPBD

./: .gitignore  CMakeLists.txt  Cloth.cu  Model.cu  XPBD.cpp  XPBD.cu
Include/: Cloth.cuh  Geometry.cuh  Model.cuh  Plane.h  Shader.cuh  XPBD.h  matrix.h  origin.h
Include/glad/: glad.c  glad.h
lib/: glfw3.lib
shader/: 1.fs  1.vs  shadow.vs
src/: glad.c
